Move pattern, update test